--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-  
+  <span>Daily Horizon</span>
+  <div class="head">
+    
+      <li>Latest news</li>
+      <li>Sports</li>
+      <li>Politics</li>
+      <li>Entertainment</li>
+      <li>Education</li>
+    
+  </div>
+  <div id="data"></div>
 </body>
 <script src="app.js"></script>
 </html>
